--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.232",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "sweetalert2": "^11.12.4",
     "tachyons": "^4.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
